--- a/VLA frontend/inicio.html
+++ b/VLA frontend/inicio.html
@@ -85,7 +85,7 @@
                     <tr>
                         <td>Sophia</td>
                         <td>Vargas</td>
-                        <td>Ir a linkedin</td>
+                        <td>Ir a linkedin</td> 
                     </tr>
                 </tbody>
             </table>
@@ -94,3 +94,5 @@
         </body>
     </head>
 </html>
+
+<!--Nuevo repository!!-->
