--- a/Aprendiendocss.html
+++ b/Aprendiendocss.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1 style="color: rgb(195, 153, 40);">Aprendiendo CSS</h1>
+    <h1 style="color: #a91d1d;">Aprendiendo CSS</h1>
 </body>
 </html>
