--- a/Aprendiendocss.html
+++ b/Aprendiendocss.html
@@ -8,5 +8,7 @@
 <body>
     <h1 style="color: rgb(195, 153, 40);">Aprendiendo CSS</h1>
     <h1 style="color: #a91d1d;">Aprendiendo CSS</h1>
+    <h1 style="background-color: aqua;"> Aprendiendo CSS</h1>
+    <h1 style="color: blue; background-color: bisque;">Aprendiendo CSS</h1>
 </body>
 </html>
