--- a/Aprendiendocss.html
+++ b/Aprendiendocss.html
@@ -10,5 +10,6 @@
     <h1 style="color: #a91d1d;">Aprendiendo CSS</h1>
     <h1 style="background-color: aqua;"> Aprendiendo CSS</h1>
     <h1 style="color: blue; background-color: bisque;">Aprendiendo CSS</h1>
+    <button style="width: 300px;height: 100px;">Enviar información</button>
 </body>
 </html>
