--- a/Aprendiendocss.html
+++ b/Aprendiendocss.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Clase CCS</title>
+    <link rel="stylesheet" href="EstilosGeneral.css">
+
 </head>
+
 <body>
+    
     <h1 style="color: rgb(195, 153, 40);">Aprendiendo CSS</h1>
     <h1 style="color: #a91d1d;">Aprendiendo CSS</h1>
     <h1 style="background-color: aqua;"> Aprendiendo CSS</h1>
     <h1 style="color: blue; background-color: bisque;">Aprendiendo CSS</h1>
-    <button style="width: 300px;height: 100px;">Enviar información</button>
+    <button style="width: 800px;height: 100px;">Enviar información</button>
+    <br><br>
+    <button style="width: 90%;height: 100px; background-color: blueviolet;">Enviar información
+    </button>
+
+    <p style="font-size: 40px; font-family: cursive;">Hola mundo</p>
+    <p style="font-size: 100%; font-family: Arial, Helvetica, sans-serif;">Hola mundo</p>
+    <img src="Imagen 1.png" alt="">
+    <h2>Saludando desde la hoja de estilo</h2>
 </body>
 </html>
