--- a/Aprendiendocss.html
+++ b/Aprendiendocss.html
@@ -11,8 +11,8 @@
 
 <body>
     
-    <h1 style="color: rgb(195, 153, 40);">Aprendiendo CSS</h1>
-    <h1 style="color: #a91d1d;">Aprendiendo CSS</h1>
+    <h1 style="color: rgb(94, 195, 40);">Aprendiendo CSS</h1>
+    <h1 style="color: #652828;">Aprendiendo CSS</h1>
     <h1 style="background-color: aqua;"> Aprendiendo CSS</h1>
     <h1 style="color: blue; background-color: bisque;">Aprendiendo CSS</h1>
     <button style="width: 800px;height: 100px;">Enviar información</button>
@@ -20,9 +20,9 @@
     <button style="width: 90%;height: 100px; background-color: blueviolet;">Enviar información
     </button>
 
-    <p style="font-size: 40px; font-family: cursive;">Hola mundo</p>
+    <p style="font-size: 40px; font-family: cursive;">Hola mundo!</p>
     <p style="font-size: 100%; font-family: Arial, Helvetica, sans-serif;">Hola mundo</p>
     <img src="Imagen 1.png" alt="">
-    <h2>Saludando desde la hoja de estilo</h2>
+    <h2>Saludando desde la hoja de estilo!!</h2>
 </body>
 </html>
