--- a/Semana 2/inicioBootstrap.html
+++ b/Semana 2/inicioBootstrap.html
@@ -3,10 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Bootstrap</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+
+
 </head>
 <body>
+    <div style="background-color: aqua; margin-bottom: 20px;">
+        <h1>Estos son los botones</h1>
+            <button type="button" class="btn btn-primary">Primary</button>
+            <button type="button" class="btn btn-secondary">Secondary</button>
+            <button type="button" class="btn btn-success">Success</button>
+            <button type="button" class="btn btn-danger">Danger</button>
+            <button type="button" class="btn btn-warning">Warning</button>
+            <button type="button" class="btn btn-info">Info</button>
+            <button type="button" class="btn btn-light">Light</button>
+            <button type="button" class="btn btn-dark">Dark</button>
+    </div>
+    <div style="background-color: rgb(255, 209, 239); margin-bottom: 20px;">
+        <button type="button" class="btn btn-primary" disabled>Primary button</button>
+        <button type="button" class="btn btn-secondary" disabled>Button</button>
+        <button type="button" class="btn btn-outline-primary" disabled>Primary button</button>
+        <button type="button" class="btn btn-outline-secondary" disabled>Button</button>
+    </div>
+    <div style="background-color: blanchedalmond;">
+        <h1>Estos son los inputs</h1>
+        <input class="form-control" style="width: 50%" placeholder="Digite su nombre" maxlength="5">
+    </div>
 
-
-    
 </body>
 </html>
