--- a/Semana 2/inicioBootstrap.html
+++ b/Semana 2/inicioBootstrap.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> BOOTSTRAP!
     <meta charset="UTF-8">
     <title>Bootstrap</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -9,9 +9,10 @@
     crossorigin="anonymous"></script>
 
 
-</head>
+</head> Documento aprendiendo bootstrap clase 4
 <body>
-    <div style="background-color: aqua; margin-bottom: 20px;">
+<div class="container">
+    <div  style="background-color: rgb(246, 255, 0); border: 30px solid rgb(163, 23, 23);">
         <h1>Estos son los botones</h1>
             <button type="button" class="btn btn-primary">Primary</button>
             <button type="button" class="btn btn-secondary">Secondary</button>
@@ -31,7 +32,21 @@
     <div style="background-color: blanchedalmond;">
         <h1>Estos son los inputs</h1>
         <input class="form-control" style="width: 50%" placeholder="Digite su nombre" maxlength="5">
+    
+        <div class="row">
+            <div class="col">
+                <input class="form-control" placeholder="Nombre">
+            </div>
+            <div class="col">
+                <input class="form-control" placeholder="Apellido">
+            </div>
+            <div class="col">
+                <input class="form-control" placeholder="Apellido">
+            </div>
+            <button class="btn btn Success">Guardar información</button>
+        </div>
     </div>
+</div>
 
 </body>
 </html>
