INSERTAR IMAGEN COMENTARIO

--- a/Semana 3/Semana3.html
+++ b/Semana 3/Semana3.html
@@ -11,7 +11,7 @@
     <div class="container">
         <!--Testimonio 1-->
         <div class="contenedorTestimonio">
-            <img class="imagenTestimonio" src="img/Imagen2.png" alt="">
+            <img class="imagenTestimonio" src="img/Imagen2.png" alt=""> <!--DE ESTA MANERA INSERTAMOS UNA IMAGEN!-->
             <div class="contenedorTextoTestimonio">
                 <p class="nombreTestimonio">Angie Obando Brenes en <strong>Costa Rica</strong></p>
                 <p class="cargoTestimonio">Profesor de Idiomas en Colegio San Sebastián</p>
