update cierre semana 3

--- a/Semana 3/Testimonios.html
+++ b/Semana 3/Testimonios.html
@@ -19,14 +19,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="inicio.html">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="Testimonios.html">Testimonios</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
+                        Aprendiendo JS
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="formulario1.html">Formulario 1</a></li>
