--- a/Semana 3/formulario1.html
+++ b/Semana 3/formulario1.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="inicio.html">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="Testimonios.html">Testimonios</a>
@@ -42,6 +42,7 @@
 </nav>
 <div>
         <img src="img/imagen4.jpg" alt="" style="width: 100%; height: 100%;">
+
 </div>
 </body>
 </html>
