--- a/Semana 3/index.html
+++ b/Semana 3/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -23,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="inicio.html">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="Testimonios.html">Testimonios</a>
@@ -31,7 +32,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
-                        Dropdown
+                        Aprendiendo JS
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="formulario1.html">Formulario 1</a></li>
@@ -41,6 +42,18 @@
         </div>
     </div>
 </nav>
+<div class="contenedorImagen">
+    <img src="img/imagen4.jpg" class="contornoImagen">
+    <div class="contenedorImagenPalabras">
+        <h1 style="color: rgb(157, 238, 238);">Bienvenido a VLA</h1>
+        <a href="formulario1.html"><button class="btn btn-success">Quiero preguntar por cursos</button></a>
+    </div>
+</div>
+
+<!--
+Creo una clase que se llama contornoImagen
+opacity al 0.5
+-->
 
 </body>
 </html>
