update progress homework 1

--- a/Tarea 1/Tarea_1.html
+++ b/Tarea 1/Tarea_1.html
@@ -1,7 +1,6 @@
 <!--
-TAREA #1
-Instrucciones:
-Utilizando HTML y CSS, crea un formulario web que solicite la siguiente información:
+TAREA #1 Instrucciones:
+Utilizando HTML y CSS, crea un formulario web que solicite  :
 Nombre (input)
 Apellidos (input)
 Teléfono (input)
@@ -11,9 +10,50 @@ Edad (input)
 Curso interesado en llevar (select)
 Aceptar términos y condiciones (checkbox)
 Botón de validar información
-Diseña el formulario de manera atractiva y funcional utilizando CSS para darle estilo.
-Asegúrate de que el formulario sea fácil de entender y navegar para el usuario.
-Debe subir el trabajo en un archivo comprimido en el classroom en el hito acorde al rubro.
+Diseña el formulario de manera atractiva y funcional 
+utilizando CSS para darle estilo.
+Asegúrate de que el formulario sea fácil de entender y 
+navegar para el usuario.
+Debe subir el trabajo en un archivo comprimido en el 
+classroom en el hito acorde al rubro.
 -->
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Tarea #1 Jorddy</title>
+</head>
+<h1>Formulario para solicitar curso</h1
+<body>
+    
+    <div class="espaciosInput">
+        <h3>Datos del estudiante</h3>
+        <label>Nombre</label>
+        <input type="text">
+        <br>
+        <label>Apellidos</label>
+        <input type="text">
+        <br>
+        <label>Teléfono</label>
+        <input type="text">
+        <br>
+        <label>Correo electrónico</label>
+        <input type="text">
+        <br>
+        <select class="form-select" aria-placeholder="hola mama">
+            <option value="0" selected>País de origen</option>
+            <option value="1">Costa Rica</option>
+            <option value="2">Irlanda</option>
+            <option value="3">India</option>
+            <option value="4">Perú</option>
+            <option value="5">Francia</option>
+            <option value="6">China</option>
+        </select>
+        <br>
+        <label>Edad</label>
+        <input type="text">
+    </div>
 
+</body>
+</html>
