--- a/Semana 2/inicioBootstrap.html
+++ b/Semana 2/inicioBootstrap.html
@@ -65,7 +65,8 @@
             <input type="checkbox" class="form-check-input" id="flexCheckChecked">
             <label class="form-check-label" for="checkMayorEdad">Soy una persona mayor de edad</label>
             <br>
-            <label class="form-check-label"><input class="form-check-input" type="checkbox"> Dame click</label>
+            <label class="form-check-label">
+            <input class="form-check-input" type="checkbox"> Dame click</label>
         </div>
         <h3>Estos son los radios</h3>
         <div>
