--- a/Tarea 1/Tarea_1.html
+++ b/Tarea 1/Tarea_1.html
@@ -26,7 +26,6 @@ classroom en el hito acorde al rubro.
 </head>
 <h1>Formulario para solicitar curso</h1
 <body>
-    
     <div class="espaciosInput">
         <h3>Datos del estudiante</h3>
         <label>Nombre</label>
@@ -53,7 +52,24 @@ classroom en el hito acorde al rubro.
         <br>
         <label>Edad</label>
         <input type="text">
+        <br>
+        <div>
+            <h3>Seleccione los cursos que desea llevar</h3>
+            <label class="form-check-label"><input class="form-check-input" type="checkbox">Calculo 1</label>
+            <br>
+            <label class="form-check-label"><input class="form-check-input" type="checkbox">Calculo 2</label>
+            <br>
+            <label class="form-check-label"><input class="form-check-input" type="checkbox">Calculo 3</label>
+            <br>
+            <label class="form-check-label"><input class="form-check-input" type="checkbox">Fisica 1</label>
+            <br>
+            <label class="form-check-label"><input class="form-check-input" type="checkbox">Fisica 2</label>
+            <br>
+            <label class="form-check-label"><input class="form-check-input" type="checkbox">Algebra</label>
+            <br>
+            <label class="form-check-label"><input class="form-check-input" type="checkbox">Ecuaciones diferenciales</label>
+            <br>
+        </div>
     </div>
-
 </body>
 </html>
