Update: selection país de origen

--- a/Semana 2/inicioBootstrap.html
+++ b/Semana 2/inicioBootstrap.html
@@ -48,7 +48,7 @@
     <div style="margin-top: 10px;background-color: chartreuse;">
         <h1>Estos son selects</h1>
         <select class="form-select" aria-placeholder="hola mama">
-            <option value="0" selected>Elija su país</option>
+            <option value="0" selected>Elija su país de origen</option>
             <option value="1">Costa Rica</option>
             <option value="2">Panama</option>
             <option value="3">Nicaragua</option>
