--- a/Tarea 1/Tarea_1.html
+++ b/Tarea 1/Tarea_1.html
@@ -22,37 +22,41 @@ classroom en el hito acorde al rubro.
     <head>
         <meta charset="UTF-8">
         <title>Tarea #1 Jorddy</title>
+        <link rel="stylesheet" type="text/css" href="css/Tarea_1.css"> <!-- llamamos  a css para aplicar estructuras-->
     </head>
-    <h1>Formulario para solicitar curso</h1
     <body>
-        <div class="espaciosInput">
-            <img class="imagenTestimonio" src="imagenes/UCR.jpg" alt=""> <!--DE ESTA MANERA INSERTAMOS UNA IMAGEN!-->
-            <h3>Datos del estudiante</h3>
-            <label>Nombre</label>
-            <input type="text">
-            <br>
-            <label>Apellidos</label>
-            <input type="text">
-            <br>
-            <label>Teléfono</label>
-            <input type="text">
-            <br>
-            <label>Correo electrónico</label>
-            <input type="text">
-            <br>
-            <select class="form-select" aria-placeholder="hola mama">
-                <option value="0" selected>País de origen</option>
-                <option value="1">Costa Rica</option>
-                <option value="2">Irlanda</option>
-                <option value="3">India</option>
-                <option value="4">Perú</option>
-                <option value="5">Francia</option>
-                <option value="6">China</option>
-            </select>
-            <br>
-            <label>Edad</label>
-            <input type="text">
-            <br>
+        <h1>Formulario para solicitar curso</h1
+        <div>
+            <div class="espaciosInput">
+                <img class="contornoImagen" src="imagenes/UCR.jpg" alt=""> <!--DE ESTA MANERA INSERTAMOS UNA IMAGEN!-->
+                <h3>Datos del estudiante</h3>
+                <label>Nombre</label>
+                <input type="text">
+                <br>
+                <label>Apellidos</label>
+                <input type="text">
+                <br>
+                <label>Teléfono</label>
+                <input type="text">
+                <br>
+                <label>Correo electrónico</label>
+                <input type="text">
+                <br>
+                <select class="form-select" aria-placeholder="hola mama">
+                    <option value="0" selected>País de origen</option>
+                    <option value="1">Costa Rica</option>
+                    <option value="2">Irlanda</option>
+                    <option value="3">India</option>
+                    <option value="4">Perú</option>
+                    <option value="5">Francia</option>
+                    <option value="6">China</option>
+                </select>
+                <br>
+                <label>Edad</label>
+                <input type="text">
+                <br>
+            </div>
+
             <div>
                 <h3>Seleccione el curso que desea matricular</h3>
                 <select class="form-select" aria-placeholder="hola mama">
@@ -69,11 +73,12 @@ classroom en el hito acorde al rubro.
             <br>
             <div>
                 <label class="form-check-label">
-                <input class="form-check-input" type="checkbox">Acepto términos y condiciones</label>
+                    <input class="form-check-input" type="checkbox">Acepto términos y condiciones</label>
             </div>
             <div>
                 <button type="button" class="btn btn-success">Validar información</button>
             </div>
+
         </div>
     </body>
 </html>
