--- a/Semana 3/index.html
+++ b/Semana 3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Index</title>
     <link rel="stylesheet" type="text/css" href="css/index.css"> <!-- acá llamamos el archivo css para poder aplicar las clases que estructuremos allí
     -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -50,11 +50,9 @@
         <a href="formulario1.html"><button class="btn btn-success">Quiero preguntar por cursos</button></a>
     </div>
 </div>
-
 <!--
 Creo una clase que se llama contornoImagen
 opacity al 0.5 ! DONE
 -->
-
 </body>
 </html>
