--- a/Tarea 1/Tarea_1.html
+++ b/Tarea 1/Tarea_1.html
@@ -19,16 +19,18 @@ classroom en el hito acorde al rubro.
 -->
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Tarea #1 Jorddy</title>
-        <link rel="stylesheet" type="text/css" href="css/Tarea_1.css"> <!-- llamamos  a css para aplicar estructuras-->
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <title>Tarea 1</title>
+    <link rel="stylesheet" type="text/css" href="css/Tarea_1.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</head>
     <body>
-        <h1>Formulario para solicitar curso</h1
-        <div>
-            <div class="espaciosInput">
-                <img class="contornoImagen" src="imagenes/UCR.jpg" alt=""> <!--DE ESTA MANERA INSERTAMOS UNA IMAGEN!-->
+        <div class="container">
+            <h1>Formulario para solicitar curso</h1>
+            <div class="">
+                <img class="contornoImagen" src="imagenes/Estudiantesjpeg.jpeg" alt=""> <!--DE ESTA MANERA INSERTAMOS UNA IMAGEN!-->
                 <h3>Datos del estudiante</h3>
                 <label>Nombre</label>
                 <input type="text">
@@ -56,9 +58,9 @@ classroom en el hito acorde al rubro.
                 <input type="text">
                 <br>
             </div>
-
+            <h3>Cursos disponibles</h3>
             <div>
-                <h3>Seleccione el curso que desea matricular</h3>
+                <h5>Seleccione el curso que desea matricular</h5>
                 <select class="form-select" aria-placeholder="hola mama">
                     <option value="0" selected>Cursos disponibles</option>
                     <option value="1">Calculo 1</option>
@@ -70,15 +72,14 @@ classroom en el hito acorde al rubro.
                     <option value="6">Algebra</option>
                 </select>
             </div>
-            <br>
             <div>
+                <h3>¡Último paso!</h3>
                 <label class="form-check-label">
-                    <input class="form-check-input" type="checkbox">Acepto términos y condiciones</label>
-            </div>
-            <div>
+                    <input class="form-check-input" type="checkbox">Acepto términos y condiciones
+                </label>
+                <br>
                 <button type="button" class="btn btn-success">Validar información</button>
             </div>
-
         </div>
     </body>
 </html>
