Update suma datos

--- a/Tarea 1/Tarea_1.html
+++ b/Tarea 1/Tarea_1.html
@@ -29,34 +29,36 @@ classroom en el hito acorde al rubro.
     <body>
         <div class="container">
             <h1>Formulario para solicitar curso</h1>
-            <div class="">
-                <img class="contornoImagen" src="imagenes/Estudiantesjpeg.jpeg" alt=""> <!--DE ESTA MANERA INSERTAMOS UNA IMAGEN!-->
-                <h3>Datos del estudiante</h3>
-                <label>Nombre</label>
-                <input type="text">
-                <br>
-                <label>Apellidos</label>
-                <input type="text">
-                <br>
-                <label>Teléfono</label>
-                <input type="text">
-                <br>
-                <label>Correo electrónico</label>
-                <input type="text">
-                <br>
-                <select class="form-select" aria-placeholder="hola mama">
-                    <option value="0" selected>País de origen</option>
-                    <option value="1">Costa Rica</option>
-                    <option value="2">Irlanda</option>
-                    <option value="3">India</option>
-                    <option value="4">Perú</option>
-                    <option value="5">Francia</option>
-                    <option value="6">China</option>
-                </select>
-                <br>
-                <label>Edad</label>
-                <input type="text">
-                <br>
+            <div class="contenedorImagen">
+                <img class="contornoImagen" src="imagenes/Estudiantesjpeg.jpeg"> <!--DE ESTA MANERA INSERTAMOS UNA IMAGEN!-->
+                <div class="contenedorImagenPalabras">
+                    <h3>Datos del estudiante</h3>
+                    <label>Nombre</label>
+                    <input type="text">
+                    <br>
+                    <label>Apellidos</label>
+                    <input type="text">
+                    <br>
+                    <label>Teléfono</label>
+                    <input type="text">
+                    <br>
+                    <label>Correo electrónico</label>
+                    <input type="text">
+                    <br>
+                    <select class="form-select" aria-placeholder="hola mama">
+                        <option value="0" selected>País de origen</option>
+                        <option value="1">Costa Rica</option>
+                        <option value="2">Irlanda</option>
+                        <option value="3">India</option>
+                        <option value="4">Perú</option>
+                        <option value="5">Francia</option>
+                        <option value="6">China</option>
+                    </select>
+                    <br>
+                    <label>Edad</label>
+                    <input type="text">
+                    <br>
+                </div>
             </div>
             <h3>Cursos disponibles</h3>
             <div>
