--- a/Tarea 1/Matricula.html
+++ b/Tarea 1/Matricula.html
@@ -16,14 +16,30 @@ Debe subir el trabajo en un archivo comprimido en el classroom en el hito acorde
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tarea 1</title>
+    <title>Tarea 1 Jorddy</title>
     <link rel="stylesheet" type="text/css" href="css/Tarea_1.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
     <body>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">UCR</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         <div class="container">
-            <h1>Formulario para solicitar curso</h1>
+            <h1>Formulario para solicitar curso académico</h1>
             <div class="contenedorImagen">
                 <img class="contornoImagen" src="imagenes/Estudiantesjpeg.jpeg"> <!--DE ESTA MANERA INSERTAMOS UNA IMAGEN!-->
                 <div class="contenedorImagenPalabras">
@@ -33,7 +49,6 @@ Debe subir el trabajo en un archivo comprimido en el classroom en el hito acorde
                     <input class="form-control" placeholder="Segundo apellido">
                     <input class="form-control" placeholder="Teléfono">
                     <input class="form-control" placeholder="Correo electrónico">
-
                     <select class="form-select" aria-placeholder="hola mama">
                         <option value="0" selected>País de origen</option>
                         <option value="1">Costa Rica</option>
