--- a/Semana 5/JugandoCss.html
+++ b/Semana 5/JugandoCss.html
@@ -15,9 +15,50 @@
     <div class="container">
         <h3>Evento hover y focus</h3>
         <button class="btn-vla">Enviar</button>
-
+        <h3>Esto es una transition</h3>
+        <button class="btn-tran">Animando al público</button>
+        <h3>Esto es una animacion</h3>
+        <button class="btn-ani">Moviendome al ritmo de la salsa</button>
+        <!-- Agregar una imagen -->
+        <img class="imagenTestimonio" src="img/imagen 1.jpg" alt="">
+        <h3>Temas de videos</h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dt63H3UPaXU?si=wttYkwBhZuRneflw"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
+        <div class="circulo-contenedor">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/dt63H3UPaXU?si=wttYkwBhZuRneflw"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+            </iframe>
+        </div>
+        <h3>Jugando con los select</h3>
+        <select class="form-select">
+            <option value="">Costa Rica</option>
+            <option value="">Nicaragua</option>
+            <option value="">Panamá</option>
+        </select>
+        <div class="jugandoSelect">
+            <select class="form-select">
+                <option>Papi Iphone</option>
+                <option>Xiaomi calidad precio</option>
+                <option>Samsun nadie los quiere</option>
+            </select>
+        </div>
+        <h3>Alineado de textos</h3>
+        <h4 class="TextoIzquierda">Texto alineado a la izquierda</h4>
+        <h4 class="TextoCentro">Texto alineado al centro</h4>
+        <h4 class="TextoDerecha">Texto alineado a la derecha</h4>
+        <h3>Alineando botones</h3>
+        <button class="btn btn-primary" style="align-items: left;">Alineado a la izquierda</button>
+        <button class="btn btn-primary" style="align-items: left;">Alineado al centro</button>
+        <div class="d-flex justify-content-end">
+        <button class="btn btn-primary">Alineado a la derecha</button>
+        </div>
 
     </div>
-    
+
 </body>
 </html>
