nav bar implementador en todos los formularios

--- a/Semana11/Formulario9.html
+++ b/Semana11/Formulario9.html
@@ -10,6 +10,7 @@
     <script src="js/Formulario9.js"></script>
 </head>
 <body>
+    <div id="menu-placeholder"></div>
     <div class="container" style="margin-top: 20px; width: 100%">
         <button class="btn btn-success" id="botonAgregarInput">Agregar Input</button>
         <div id="inputsAgregados" style="margin-top: 10px; margin-bottom: 10px;"></div>
