--- a/Semana11/Menu.html
+++ b/Semana11/Menu.html
@@ -20,6 +20,14 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="Formulario1.html">Formulario 1</a></li>
+                        <li><a class="dropdown-item" href="Formulario2.html">Formulario 2</a></li>
+                        <li><a class="dropdown-item" href="Formulario3.html">Formulario 3</a></li>
+                        <li><a class="dropdown-item" href="Formulario4.html">Formulario 4</a></li>
+                        <li><a class="dropdown-item" href="Formulario5.html">Formulario 5</a></li>
+                        <li><a class="dropdown-item" href="Formulario6.html">Formulario 6</a></li>
+                        <li><a class="dropdown-item" href="Formulario7.html">Formulario 7</a></li>
+                        <li><a class="dropdown-item" href="Formulario8.html">Formulario 8</a></li>
+                        <li><a class="dropdown-item" href="Formulario9.html">Formulario 9</a></li>
                     </ul>
                 </li>
             </ul>
