--- a/Semana11/Formulario3.html
+++ b/Semana11/Formulario3.html
@@ -9,32 +9,7 @@
     <script src="js/Formulario3.js"></script>
   </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">VLA</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="Testimonios.html">Testimonios</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Aprendiendo JS
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="Formulario1.html">Formulario 1</a></li>
-                  </ul>
-                </li>
-              </ul>            
-            </div>
-        </div>
-      </nav>
+    <div id="menu-placeholder"></div>
     <div class="container">
       <h1>Los saludo desde formulario 3</h1>
       <input class="form-control" id="textoValor1" placeholder="Digite el valor1">
