--- a/Semana11/Testimonios.html
+++ b/Semana11/Testimonios.html
@@ -8,40 +8,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-          <a class="navbar-brand" href="#">VLA</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="Testimonios.html">Testimonios</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Aprendiendo JS
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="Formulario1.html">Formulario 1</a></li>
-                </ul>
-              </li>
-            </ul>            
-          </div>
-      </div>
-    </nav>
-
+    <div id="menu-placeholder"></div>
     <!--
       Implemente una opcion de dropdowns en vez de contacto con el nombre
             Aprendiendo JS y dentro de js colocar el archivo
                 Formulario1.html
     -->
-
-
     <div class="container">
         <!--Testimonio 1-->
         <div class="contenedorTestimonio " >
@@ -69,6 +41,11 @@
                                            turpis. Integer sed eros et nisi ullamcorper consectetur vitae id turpis.</p>
             </div>
         </div>
-    </div>    
+    </div>
+    <script>
+    $(function () {
+        $('#menu-placeholder').load('Menu.html')
+      })
+    </script>
 </body>
 </html>
