--- a/Semana11/index.html
+++ b/Semana11/index.html
@@ -8,32 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">VLA</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="Testimonios.html">Testimonios</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Aprendiendo JS
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="Formulario1.html">Formulario 1</a></li>
-              </ul>
-            </li>
-          </ul>            
-        </div>
-    </div>
-  </nav>
+  <div id="menu-placeholder"></div>
   <div class="contenedorImagen">
     <img src="img/Imagen4.jpg" class="contornoImagen">
     <div class="contenedorImagenPalabras">
@@ -41,5 +16,11 @@
       <a href="Formulario1.html"><button class="btn btn-success">Quiero preguntar por cursos</button></a>      
     </div>
   </div>    
+
+  <script>
+    $(function () {
+      $('#menu-placeholder').load('Menu.html')
+    })
+  </script>
 </body>
 </html>
