Front end semana 11 end

--- a/Semana11/Testimonios.html
+++ b/Semana11/Testimonios.html
@@ -9,11 +9,6 @@
 </head>
 <body>
     <div id="menu-placeholder"></div>
-    <!--
-      Implemente una opcion de dropdowns en vez de contacto con el nombre
-            Aprendiendo JS y dentro de js colocar el archivo
-                Formulario1.html
-    -->
     <div class="container">
         <!--Testimonio 1-->
         <div class="contenedorTestimonio " >
@@ -42,8 +37,10 @@
             </div>
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
     <script>
-    $(function () {
+      $(function () {
         $('#menu-placeholder').load('Menu.html')
       })
     </script>
