--- a/Semana11/index.html
+++ b/Semana11/index.html
@@ -16,7 +16,7 @@
       <a href="Formulario1.html"><button class="btn btn-success">Quiero preguntar por cursos</button></a>      
     </div>
   </div>    
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script>
     $(function () {
       $('#menu-placeholder').load('Menu.html')
