--- a/Semana11/Formulario1.html
+++ b/Semana11/Formulario1.html
@@ -9,7 +9,9 @@
 <body>
   <div id="menu-placeholder"></div>
     <h1>Los saludo desde formulario 1</h1>
-
+    <!--Lo que se debe hacer es insertar los scripts al final del body
+    con la intención de que el usuario puedar observar la parte bonita
+    mientras cargan los archivos funcionales de java script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="js/Formulario1.js"></script>
