--- a/Tarea4_Proyecto_1_CV/Jorddy_CV.html
+++ b/Tarea4_Proyecto_1_CV/Jorddy_CV.html
@@ -12,7 +12,40 @@
 </head>
 
 <body>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Currículum Vítae</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="Datos_personales.html">Datos Personales</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Apartados
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="Experiencia.html">Experiencia Laboral</a></li>
+                            <li><a class="dropdown-item" href="Educación.html">Educación</a></li>
+                            <li><a class="dropdown-item" href="idiomas.html">Idiomas</a></li>
+                            <li><a class="dropdown-item" href="Certificaciones.html">Certificaciones</a></li>
+                            <li><a class="dropdown-item" href="datos_adicionales.html">Datos adicionales</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
     <div class="container">
         <h1>CV Jorddy</h1>  
     </div>
+
 </body>
