--- a/Tarea4_Proyecto_1_CV/Jorddy_CV.html
+++ b/Tarea4_Proyecto_1_CV/Jorddy_CV.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Testimonios VLA</title>
-    <link rel="stylesheet" type="text/css" href="css/Testimonios.css">
+    <title>Currículum Vítae Jorddy</title>
+    <link rel="stylesheet" type="text/css" href="css/Jorddy_CV.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -12,40 +12,15 @@
 </head>
 
 <body>
-
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Currículum Vítae</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="Datos_personales.html">Datos Personales</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Apartados
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="Experiencia.html">Experiencia Laboral</a></li>
-                            <li><a class="dropdown-item" href="Educación.html">Educación</a></li>
-                            <li><a class="dropdown-item" href="idiomas.html">Idiomas</a></li>
-                            <li><a class="dropdown-item" href="Certificaciones.html">Certificaciones</a></li>
-                            <li><a class="dropdown-item" href="datos_adicionales.html">Datos adicionales</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-
+    <div id="menu-placeholder"></div>
     <div class="container">
         <h1>CV Jorddy</h1>  
     </div>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script>
+        $(function () {
+            $('#menu-placeholder').load('menuCV.html');
+        })
+    </script>
 </body>
+</html>
