--- a/Tarea4_Proyecto_1_CV/languages.html
+++ b/Tarea4_Proyecto_1_CV/languages.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Currículum Vítae Jorddy</title>
+    <title>languages</title>
     <link rel="stylesheet" type="text/css" href="css/Jorddy_CV.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
