--- a/Tarea4_Proyecto_1_CV/menuCV.html
+++ b/Tarea4_Proyecto_1_CV/menuCV.html
@@ -8,17 +8,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="Datos_personales.html">Datos Personales</a>
+                    <a class="nav-link active" aria-current="page" href="Datos_personales.html">Personal Data</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
-                        Apartados
+                        Sections
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="Experiencia.html">Experiencia Laboral</a></li>
-                        <li><a class="dropdown-item" href="Educación.html">Educación</a></li>
-                        <li><a class="dropdown-item" href="idiomas.html">Idiomas</a></li>
+                        <li><a class="dropdown-item" href="Experiencia.html">Work Experience</a></li>
+                        <li><a class="dropdown-item" href="Academic_Background.html">Academic Background</a></li>
+                        <li><a class="dropdown-item" href="languages.html">languages</a></li>
                         <li><a class="dropdown-item" href="Certificaciones.html">Certificaciones</a></li>
                         <li><a class="dropdown-item" href="datos_adicionales.html">Datos adicionales</a></li>
                     </ul>
