--- a/Tarea4_Proyecto_1_CV/Datos_personales.html
+++ b/Tarea4_Proyecto_1_CV/Datos_personales.html
@@ -14,9 +14,14 @@
 
 <body>
     <div id="menu-placeholder"></div>
-    <div class="container">
-        <h1>CV Jorddy</h1>
-    </div>
+    <div class="container">PERSONAL INFORMATION</div>
+    <div class="container">ID number: 114980956</div>
+    <div class="container">Nationality: Costarrican</div>
+    <div class="container">Civil status: Single</div>
+    <div class="container">Residence: Montes de Oca, San José</div>
+    <div class="container">Phone number: 87900040</div>
+    <div class="container">E-mail: jorddy.castro@gmail.com</div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
         $(function () {
