--- a/Tarea4_Proyecto_1_CV/Experience.html
+++ b/Tarea4_Proyecto_1_CV/Experience.html
@@ -14,8 +14,34 @@
 
 <body>
     <div id="menu-placeholder"></div>
+    <div class="container">Work Experience</div>
+    <div class="container">a. Lugar.
+    b. Fecha de inicio y fecha de finalización.
+    c. Descripción de las tareas realizadas.</div>
     <div class="container">
-        <h1>CV Jorddy</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Place</th>
+                    <th>Start Date</th>
+                    <th>End Date</th>
+                    <th>Tareas realizadas</th>
+                </tr>
+            </thead>
+        
+            <tbody>
+                <tr>
+                    <td>Burger King</td>
+                    <td>0</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
