--- a/Tarea4_Proyecto_1_CV/menuCV.html
+++ b/Tarea4_Proyecto_1_CV/menuCV.html
@@ -16,11 +16,11 @@
                         Sections
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="Experiencia.html">Work Experience</a></li>
+                        <li><a class="dropdown-item" href="Experience.html">Work Experience</a></li>
                         <li><a class="dropdown-item" href="Academic_Background.html">Academic Background</a></li>
                         <li><a class="dropdown-item" href="languages.html">languages</a></li>
-                        <li><a class="dropdown-item" href="Certificaciones.html">Certificaciones</a></li>
-                        <li><a class="dropdown-item" href="datos_adicionales.html">Datos adicionales</a></li>
+                        <li><a class="dropdown-item" href="Certifications.html">Certifications</a></li>
+                        <li><a class="dropdown-item" href="Additional_data.html">Additional data</a></li>
                     </ul>
                 </li>
             </ul>
