--- a/Tarea4_Proyecto_1_CV/Experience.html
+++ b/Tarea4_Proyecto_1_CV/Experience.html
@@ -25,19 +25,68 @@
                     <th>Place</th>
                     <th>Start Date</th>
                     <th>End Date</th>
-                    <th>Tareas realizadas</th>
+                    <th>Tasks performed</th>
                 </tr>
             </thead>
-        
             <tbody>
                 <tr>
-                    <td>Burger King</td>
+                    <td>PHC Ingenieros Consultores</td>
                     <td>0</td>
                     <td>1</td>
                     <td>2</td>
                     <td>3</td>
                 </tr>
+                <tr>
+                    <td>Airbnb Host</td>
+                    <td>0</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>Consulting Services</td>
+                    <td>0</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>Plataforma Internacional Real S.A.</td>
+                    <td>0</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>Beneficio La Sylvia Ltda.</td>
+                    <td>0</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>Constructora Samagu S.A.</td>
+                    <td>0</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>Constructora Samagu S.A.</td>
+                    <td>0</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>Angel Fire Resort, New Mexico, United States</td>
+                    <td>2016</td>
+                    <td>2017</td>
+                    <td>2</td>
+                    <td>3</td>
+                </tr>
             </tbody>
+
         </table>
     </div>
 
