--- a/Tarea4_Proyecto_1_CV/Experience.html
+++ b/Tarea4_Proyecto_1_CV/Experience.html
@@ -15,13 +15,11 @@
 <body>
     <div id="menu-placeholder"></div>
     <div class="container">Work Experience</div>
-    <div class="container">a. Lugar.
-    b. Fecha de inicio y fecha de finalización.
-    c. Descripción de las tareas realizadas.</div>
-    <div class="container">
-        <table>
-            <thead>
-                <tr>
+    <br>
+    <div >
+        <table class="container">
+            <thead >
+                <tr class="elemento">
                     <th>Place</th>
                     <th>Start Date</th>
                     <th>End Date</th>
@@ -29,61 +27,59 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr class="elemento2">
                     <td>PHC Ingenieros Consultores</td>
                     <td>2023</td>
                     <td>2023</td>
                     <td>2</td>
-                    <td>3</td>
                 </tr>
-                <tr>
+                <tr class="elemento">
                     <td>Airbnb Host</td>
                     <td>2022</td>
                     <td>2024</td>
                     <td>2</td>
-                    <td>3</td>
+
                 </tr>
-                <tr>
+                <tr class="elemento2">
                     <td>Consulting Services</td>
                     <td>2020</td>
                     <td>2023</td>
                     <td>2</td>
-                    <td>3</td>
+
                 </tr>
-                <tr>
+                <tr class="elemento">
                     <td>Plataforma Internacional Real S.A.</td>
                     <td>2022</td>
                     <td>2022</td>
                     <td>2</td>
-                    <td>3</td>
+
                 </tr>
-                <tr>
+                <tr class="elemento2">
                     <td>Beneficio La Sylvia Ltda.</td>
                     <td>2019</td>
                     <td>2022</td>
                     <td>2</td>
-                    <td>3</td>
+
                 </tr>
-                <tr>
+                <tr class="elemento">
                     <td>Constructora Samagu S.A.</td>
                     <td>2019</td>
                     <td>2020</td>
                     <td>2</td>
-                    <td>3</td>
                 </tr>
-                <tr>
+                <tr class="elemento2">
                     <td>Constructora Samagu S.A.</td>
                     <td>2018</td>
                     <td>2018</td>
                     <td>2</td>
-                    <td>3</td>
+
                 </tr>
-                <tr>
+                <tr class="elemento">
                     <td>Angel Fire Resort, New Mexico, United States</td>
                     <td>2016</td>
                     <td>2017</td>
                     <td>2</td>
-                    <td>3</td>
+
                 </tr>
             </tbody>
 
